12939
The code below
```scala
class Foo {
  type Bar = (Int, Int)
}

class FooFoo extends Foo {
  class Bar
}
```
produces the following error message
```scala
test.scala:6: error: error overriding type Bar in class Foo, which equals (Int, Int);
 class Bar needs `override' modifier
  class Bar
        ^
one error found
```
and when adding the "requested" modifier
```scala
test.scala:6: error: `override' modifier not allowed for classes
  override class Bar
                 ^
one error found
```
